# write-together

./: .gitignore  CMakeLists.txt  README.md  run.sh  shortcut_installer.bat  shortcut_installer.sh
.github/workflows/: ci.yml  plantuml.yml
docs/: crypto++_setup.md  cryptopp_setup.md  database.md  protocol.md  setup_cryptopp.md  setup_ssl.md  ssl_setup.md
docs/plantuml/: protocol.pu
include/: LSEQ.h  Message.h  MessageType.h  SharedEditor.h
include/client/: changePasswordDialog.h  changeUsernameDialog.h  fileInfo.h  loginTextEditor.h  myClient.h  newFileDialog.h  texteditor.h  utility.h
include/crdt/: LSEQ.h  Lseq.h  SafeSharedEditor.h  SharedEditor.h  Symbol.h
include/cte/client/: OpenFileUrl.h  ProfileUpdateDialog.h  QTStylesheet.h  UserInfo.h  changePasswordDialog.h  changeUsernameDialog.h  client.h  connection_form.h  editor.h  fileInfo.h  home.h  loginTextEditor.h  login_form.h  myClient.h  newFileDialog.h  remote_cursor.h  signup_form.h  texteditor.h  user.h  utility.h  worker_network.h  worker_ui.h
include/cte/client_new/: client.h  connection_form.h  home.h  (+10 more)
include/network/: TcpSocket.h
include/protocol/: CloseMessage.h  CreateMessage.h  CursorMessage.h  Document.h  DocumentData.h  DocumentMessage.h  DocumentsMessage.h  EraseMessage.h  ErrorMessage.h  InsertMessage.h  LoginMessage.h  LogoutMessage.h  Message.h  MessageType.h  OpenMessage.h  Profile.h  ProfileMessage.h  ProfileOkMessage.h  SignUpMessage.h  SignupMessage.h  SignupOkMessage.h  TextMessage.h  User.h  UserProfile.h
lib/: CMakeLists.txt
lib/bcrypt/: CMakeLists.txt
scripts/: install.bat  install.sh  install_dependencies.sh  run.sh
src/: CMakeLists.txt
src/certificate/: server_local.req  server_privkey.pem
src/client/: CMakeLists.txt  OpenFileUrl.cpp  OpenFileUrl.ui  ProfileUpdateDialog.cpp  ProfileUpdateDialog.ui  QTStylesheet.cpp  UserInfo.cpp  UserInfo.h  changePasswordDialog.cpp  changePasswordDialog.ui  changeUsernameDialog.cpp  changeUsernameDialog.ui  client.cpp  connection_form.cpp  editProfileDialog.cpp  editor.cpp  fileInfo.cpp  fileInfo.h  home.cpp  loginTextEditor.cpp  loginTextEditor.ui  login_form.cpp  main.cpp  myClient.cpp  newFileDialog.cpp  newFileDialog.ui  profile_dialog.cpp  remote_cursor.cpp  resource.qrc  signup_form.cpp  texteditor.cpp  user.cpp  utility.cpp  worker_network.cpp  worker_ui.cpp
src/client/certificate/: ca_certificate.pem  resource.qrc
src/client/ui/: connection_form.ui  editor.ui  home.ui  login_form.ui  profile_dialog.ui  resource.qrc  signup_form.ui
src/client_new/: CMakeLists.txt  client.cpp  connection_form.cpp  editor.cpp  home.cpp  login_form.cpp  main.cpp  network_worker.cpp  profile_dialog.cpp  remote_cursor.cpp  signup_form.cpp  ui_worker.cpp  user.cpp  worker_network.cpp  worker_ui.cpp
src/client_new/ui/: connection_form.ui  editor.ui  home.ui  input_dialog.ui  login_form.ui  profile_dialog.ui  resource.qrc  signup_form.ui
src/crdt/: CMakeLists.txt  LSEQ.cpp  Lseq.cpp  SafeSharedEditor.cpp  SharedEditor.cpp  Symbol.cpp  lseq.cpp  shared_editor.cpp  symbol.cpp
src/crypto/: CMakeLists.txt  password_utility.cpp
src/database/: CMakeLists.txt  DatabaseGuard.cpp  database_guard.cpp  database_utility.cpp  database_utility_secret.cpp  database_utility_secret.h  db_create.sql  db_drop.sql  db_utility.cpp  db_utility.h  db_utility_secret.cpp  db_utility_secret.h
src/database/include/: db_utility_secret.h
src/database/sql/: database_create.sql  database_drop.sql
src/network/: CMakeLists.txt  Socket.cpp  TcpSocket.cpp  network_utility.cpp  socket.cpp
src/protocol/: CMakeLists.txt  CloseMessage.cpp  CreateMessage.cpp  CursorMessage.cpp  Document.cpp  DocumentData.cpp  DocumentInfo.cpp  DocumentMessage.cpp  DocumentsMessage.cpp  EraseMessage.cpp  ErrorMessage.cpp  InsertMessage.cpp  LoginMessage.cpp  LogoutMessage.cpp  Message.cpp  OpenMessage.cpp  Profile.cpp  ProfileMessage.cpp  ProfileOkMessage.cpp  SignUpMessage.cpp  SignupMessage.cpp  SignupOkMessage.cpp  TextMessage.cpp  User.cpp  UserProfile.cpp  close_message.cpp  create_message.cpp  cursor_message.cpp  document.cpp  document_info.cpp  document_message.cpp  documents_message.cpp  erase_message.cpp  error_message.cpp  format.cpp  format_message.cpp  insert_message.cpp  login_message.cpp  logout_message.cpp  message.cpp  (+6 more)
src/server/: CMakeLists.txt  Crypto++ setup.md  DocumentManager.cpp  DocumentManager.h  IdentityManager.cpp  IdentityManager.h  OpenDocument.cpp  OpenDocument.h  PasswordManager.cpp  SafeSharedEditor.cpp  SafeSharedEditor.h  Saver.cpp  Server.cpp  Server.h  User.cpp  User.h  Worker.cpp  Worker.h  db_utility.cpp  db_utility.h  document_manager.cpp  identity_manager.cpp  main.cpp  open_document.cpp  password_utility.cpp  resource.qrc  saver.cpp  server.cpp  worker.cpp
src/server/certificate/: local_certificate.pem  private.key  resource.qrc
src/server/include/: DocumentManager.h  IdentityManager.h  OpenDocument.h  Saver.h  Server.h  Worker.h
src/widget/: CMakeLists.txt  collaborate_dialog.cpp  connect_form.cpp  connection_form.cpp  create_dialog.cpp  editor.cpp  form.cpp  home.cpp  input_dialog.cpp  login_form.cpp  profile_dialog.cpp  signup_form.cpp  widget.cpp
src/widget/ui/: collaborate_dialog.ui  connect_form.ui  create_dialog.ui  editor.ui  home.ui  login_form.ui  profile_dialog.ui  resource.qrc  signup_form.ui
test/: CMakeLists.txt
test/crdt/: CMakeLists.txt  test_commutativity.cpp  test_erase.cpp  test_idempotency.cpp  test_insert.cpp  test_out_of_order.cpp
test/protocol/: CMakeLists.txt  test_serialization_close.cpp  test_serialization_create.cpp  test_serialization_cursor.cpp  test_serialization_document.cpp  test_serialization_documents.cpp  test_serialization_erase.cpp  test_serialization_error.cpp  test_serialization_format.cpp  test_serialization_insert.cpp  test_serialization_login.cpp  test_serialization_logout.cpp  test_serialization_open.cpp  test_serialization_profile.cpp  test_serialization_profile_ok.cpp  test_serialization_sign_up.cpp  test_serialization_signup.cpp  test_serialization_signup_ok.cpp  test_serialization_text.cpp
(+110 files in other folders)
